# CVec

./: .gitignore  LICENSE  main.py  pyproject.toml
scripts/: app.py
scripts/data scraping/: jobPos_scraper.py
scripts/data_processing/: jobPos_wrangling.py
scripts/data_scraping/: interviewQues_kaggle_scraper_1.py  interviewQues_kaggle_scraper_2.py  interviewQues_reddit_scraper.py  jobPos_scraper.py  jobPos_wrangling.py
scripts/models/: resume_prompt.py
scripts/prompts/: mock_interview_prompt.py  resume_prompt.py
scripts/vectorDB/: vectorDB.py  vector_search.py  vector_store.py
scripts/web/: agents.py  cvec.py  mock_interview.py  resume_q&a.py  streamlit.py  streamlit_adjusted.py  streamlit_v1.py
