[project]
name = "cvec"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "chonkie[all]>=1.0.5",
    "joblib>=1.5.2",
    "jq>=1.10.0",
    "langchain-community>=0.4.1",
    "loguru>=0.7.3",
    "openai>=2.9.0",
    "openai-agents>=0.6.2",
    "pydantic>=2.12.5",
    "qdrant-client>=1.16.1",
    "streamlit>=1.52.1",
    "tiktoken>=0.12.0",
]
