[project]
name = "cvec"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "chonkie[all]>=1.4.2",
    "joblib>=1.5.2",
    "loguru>=0.7.3",
    "pydantic>=2.12.5",
    "qdrant-client>=1.16.2",
    "selenium>=4.39.0",
    "streamlit>=1.52.1",
    "webdriver-manager>=4.0.2",
]
